--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
     background-color: #bab6b629;
+    font-family: 'Play', sans-serif;
 }
 
 .personalInfo {
@@ -23,6 +24,7 @@ body {
 .pageHeader {
     font-size: 40px;
     text-align: center;
+    text-shadow: 4px 4px 5px #76387d45;
 }
 
 img {
@@ -52,6 +54,14 @@ img {
     padding: 1em;
 }
 
+.projectDetailsContainer>p {
+    font-size: 18px;
+}
+
+li {
+    font-size: 18px;
+}
+
 .projectHeader {
     text-align: center;
     margin-bottom: -10px;
@@ -63,3 +73,4 @@ img {
     font-size: 24px;
     margin-bottom: 0;
 }
+
